--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^2.9.3",
     "gh-polyglot": "^2.3.2",
     "react": "^16.12.0",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.12.0",
     "react-material-ui-form-validator": "^2.0.9",
     "react-scripts": "3.3.0"
